<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/holo_green_dark"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@color/white">

            <ImageView
                android:id="@+id/notification_bell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="8dp"
                android:src="@drawable/ic_notification_bell"
                app:tint="@color/white" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:id="@+id/studentIdCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/my_toolbar"
            app:strokeColor="#FF0000"
            app:strokeWidth="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="259dp"
                android:background="#80FFFFFF"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/backgroundImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/usc_card_background" />

                <ImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/blank_profile_pic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Name"
                    android:textColor="#333333"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@id/profileImageView"
                    app:layout_constraintTop_toTopOf="@id/profileImageView" />

                <TextView
                    android:id="@+id/uscIdTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:text="USC ID"
                    android:textColor="#555555"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@id/profileImageView"
                    app:layout_constraintTop_toBottomOf="@id/nameTextView" />

                <TextView
                    android:id="@+id/roleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:text="Role"
                    android:textColor="#555555"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@id/profileImageView"
                    app:layout_constraintTop_toBottomOf="@id/uscIdTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="Edit Profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/studentIdCard" />

        <LinearLayout
            android:id="@+id/subscriptionSettingsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editProfileButton"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Subscription Settings"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#333333"
                android:paddingBottom="8dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/lifeNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Life Post and Reply Notifications" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/academicNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Academic Post and Reply Notifications" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/eventNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Event Post and Reply Notifications" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu" />
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/notification_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:contentDescription="View notifications"
        app:menu="@menu/drawer_menu_notifications">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notification_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>